#4: Added play next UI component to the desktop player